--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@ header {
     text-align: center;
     padding-top: 35px;
 }
-
+/* Weird bug with h2 center allignment.*/
 h2 {
     color: white;
     font-size: 40px;
     background-color: rgba(0, 0, 0, 0.2);
     text-align: center;
+    padding-left: 0px;
 }
 
 h3 {
@@ -40,6 +41,6 @@ footer {
 
 img {
     float: right;
-    padding-top: 200px;
+    padding-top: 287px;
+    padding-right: 40px;
 }
-
