Moved images to their own folder

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(realistic\ landscaping\ PNW.png);
+    background-image: url(Images/UpdatedLandscaping1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
