--- a/styles2.css
+++ b/styles2.css
@@ -1,33 +1,63 @@
-
 body {
-    background: linear-gradient(to left, #efd993, #e3e083);;
+    background-image: url(images/landscape-background.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+header h1 {
+   color: white;
+    text-shadow: 4px 4px black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    text-align: center;
+    margin-top: 50px;
+}
+footer {
+    color: white;
+    text-shadow: 3px 2px black;
+    text-align: center;
+    padding-top: 1000px;
+    font-size: 25px;
 }
 
 .columns {
     display: flex;
-    margin-right: 750px;
+    gap: 20px;
+    justify-content: center;
+    align-items: flex-start; /* Ensures columns align at the top */
 }
 
 .column {
     flex: 1;
-    padding: 10px;
-    border: 1px solid;
-    border-radius: 15px;
-}
-
-header {
-    text-align: left;
-    margin-left: 20%;
-}
-
-.image-landscape {
+    color: white;
+    text-align: center;
     display: flex;
-    justify-content: right;
+    flex-direction: column;
+    align-items: center;
 }
 
-.image-landscape img {
-    width: 49.5%;
-    border: 5px solid #325404;
-    border-radius: 25px;
+.info-box {
+    margin-top: 8px;
+    background-color: rgba(50, 87, 24, 0.5);
+    border-radius: 10px;
+    width: 90%;
+    padding: 10px;
+    color: white;
+    text-shadow: 1px 1px black;
+    font-size: 18px;
 }
 
+
+.name-box {
+    background-color: rgba(50, 87, 24, 0.7);
+    border-radius: 10px;
+    padding: 10px;
+    width: 90%;
+    color: white;
+    text-align: center;
+    text-shadow: 2px 2px black;
+    font-size: 22px;
+    font-weight: bold;
+}
