--- a/index-styles.css
+++ b/index-styles.css
@@ -1,87 +1,64 @@
-body {
-    background-image: url(images/updated-landscaping1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgba(0, 0, 0, 0);
+html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
 }
 
 h1 {
     color: white;
-    text-shadow: 4px 4px black;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 50px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 7vw;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 6vw;
+    margin-bottom: -1%;
 }
 
 h2 {
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 5.5vw;
     text-align: center;
-    font-size: 30px;
-    text-shadow: 3px 2px black;
-
+    margin-bottom: -7%;
+    margin-top: 0;
 }
 
 h3 {
-
     color: white;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 3vw;
     text-align: center;
-    font-size: 35px;
-    text-shadow: 3px 2px black;
-    margin-top: 10%;
-    background-color: rgba(99, 98, 98, 0.5);
+    margin-top: 3%;
+    margin-bottom: 0%;
 }
 
-.center-links {
-    text-align: center;
-    margin-top: 2vw;
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
-.center-links a {
-    display: inline-block;
-    margin: 1vw;
-    font-size: 25px;
-    color: white;
-    text-decoration: none;
-    background-color: rgba(34, 85, 34, 0.8);
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-    transition: background 0.3s ease, transform 0.2s ease;
-}
-
-.center-links a:hover {
-    background-color: rgba(34, 85, 34, 1);
-    transform: scale(1.05);
+/* Centers the image absolutely and constrains its size */
+.container img {
+    margin-top: 5%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90vw;
+    max-height: 90vh;
+    width: auto;
+    height: auto;
+    display: block;
 }
 
 footer {
     color: white;
     text-shadow: 3px 2px black;
     text-align: center;
-    padding-top: 500px;
+    margin-top: 50%;
     font-size: 25px;
 }
 
-img {
-    display: block;
-    margin: auto;
-    border: 5px solid black;
-    width: 50%;
-    max-width: 500px;
-}
-
-/* Fix more breakpoints in future */
-@media (max-width: 960px) {
-    h3 {
-        font-size: 24px;
-        margin-top: 10%;
-    }
-
-    .center-links a {
-        font-size: 20px;
-    }
-}
+/* Major Media queries needed! */
