--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 nav {
-    background: rgba(50, 87, 24, 0.7);
+    background: rgb(50, 87, 24);
     color: #fff;
     padding: 10px;
     display: flex;
@@ -42,6 +42,7 @@ footer {
     margin-top: auto;
 }
 
-nav, footer {
-  font-family: 'Outfit', sans-serif;
+nav,
+footer {
+    font-family: 'Outfit', sans-serif;
 }
