--- a/contact-styles.css
+++ b/contact-styles.css
@@ -6,7 +6,7 @@ body {
     background-color: rgba(0, 0, 0, 0);
 }
 
-h1 {
+header h1 {
     color: white;
     text-shadow: 4px 4px black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
