--- a/work-styles.css
+++ b/work-styles.css
@@ -1,7 +1,17 @@
-body {
-    background: linear-gradient(270deg, #d4fca9, #88cc74, #f0d878, #d4fca9);
-    background-size: 600% 600%;
-    animation: gradientBG 20s ease infinite;
+html body {
+    background-color: black;
+    color: white;
+}
+
+header h1 {
+    color: white;
+    font-family: "Outfit", sans-serif;
+    font-size: 3.5rem;
+    text-align: center;
+    margin-top: 2.5rem;
+    margin-bottom: 0rem;
+    max-width: 100%;
+    font-optical-sizing: auto;
 }
 
 /* Center the whole section and give it some breathing room */
@@ -45,16 +55,18 @@ body {
     text-shadow: 1px 1px 3px black;
 }
 
-@keyframes gradientBG {
-    0% {
-        background-position: 0% 50%;
+@media (max-width: 730px) {
+    header h1 {
+        font-size: 3.5rem;
+        margin-top: 5.5rem;
+        margin-bottom: 0rem;
     }
+}
 
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
+@media (max-width: 380px) {
+    header h1 {
+        font-size: 3.5rem;
+        margin-top: 9rem;
+        margin-bottom: 0rem;
     }
 }
