--- a/css/services-styles.css
+++ b/css/services-styles.css
@@ -1,26 +1,5 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  min-height: 100vh;
-  position: relative;
-  z-index: 0;
-  overflow-x: hidden;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-image: url(images/services-image.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  z-index: -1; /* makes sure it's behind everything */
+body {
+    --bg-image: url('images/services-image.png');
 }
 
 header h1 {
@@ -29,7 +8,7 @@ header h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 #services {
@@ -46,7 +25,7 @@ header h1 {
 
 /* Gives each service card a background, padding, and hover effects */
 .service-card {
-    background: rgba(50, 87, 24, 0.7);
+    background: rgba(61, 107, 28, 0.774);
     color: #fff;
     padding: 15px;
     border-radius: 8px;
@@ -58,7 +37,7 @@ header h1 {
 
 .service-card:hover {
     transform: scale(1.05);
-    background: rgba(34, 85, 34, 0.9);
+    background: rgba(45, 92, 12, 0.893);
 }
 
 @media (min-width: 1025px) {
